@@ -1,180 +1,0 @@
-<objects attr-sync="on">
-  <object type="MonoDevelop.Components.FixedWidthWrapLabel" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.Widget">
-    <itemgroups>
-      <itemgroup label="FixedWidthWrapLabel Properties">
-        <property name="MaxWidth" />
-        <property name="Markup" />
-        <property name="Text" />
-        <property name="Indent" />
-        <property name="BreakOnPunctuation" />
-        <property name="BreakOnCamelCasing" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Ide.FindInFiles.SearchResultWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups>
-      <itemgroup label="SearchResultWidget Properties">
-        <property name="BasePath" />
-        <property name="ResultCount" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.FolderListSelector" palette-category="General" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals />
-  </object>
-  <object type="MonoDevelop.Ide.Gui.Components.ExecutionModeComboBox" palette-category="General" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals>
-      <itemgroup label="ExecutionModeComboBox Signals">
-        <signal name="SelectionChanged" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Ide.Projects.CombineEntryFeatureSelector" palette-category="MonoDevelop.Ide" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.MenuButton" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.Button">
-    <itemgroups>
-      <itemgroup label="MenuButton Properties">
-        <property name="Label" />
-        <property name="UseMarkup" />
-        <property name="UseUnderline" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.SearchEntry" palette-category="General" allow-children="false" base-type="Gtk.EventBox">
-    <itemgroups>
-      <itemgroup label="SearchEntry Properties">
-        <property name="ForceFilterButtonVisible" />
-        <property name="IsCheckMenu" />
-        <property name="ActiveFilterID" />
-        <property name="EmptyMessage" />
-        <property name="Query" />
-        <property name="Ready" />
-        <property name="HasFocus" />
-      </itemgroup>
-    </itemgroups>
-    <signals>
-      <itemgroup label="SearchEntry Signals">
-        <signal name="Changed" />
-        <signal name="Activated" />
-        <signal name="FilterChanged" />
-        <signal name="RequestMenu" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Ide.Gui.Components.EnvVarList" palette-category="MonoDevelop.Projects.Gui" allow-children="false" base-type="Gtk.ScrolledWindow">
-    <itemgroups />
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.IconView" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.ScrolledWindow">
-    <itemgroups />
-    <signals>
-      <itemgroup label="IconView Signals">
-        <signal name="IconSelected" />
-        <signal name="IconDoubleClicked" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Components.FileEntry" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.HBox">
-    <itemgroups>
-      <itemgroup label="BaseFileEntry Properties">
-        <property name="BrowserTitle" />
-        <property name="DefaultPath" />
-        <property name="Path" />
-      </itemgroup>
-    </itemgroups>
-    <signals>
-      <itemgroup label="BaseFileEntry Signals">
-        <signal name="PathChanged" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Components.FolderEntry" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.HBox">
-    <itemgroups>
-      <itemgroup label="BaseFileEntry Properties">
-        <property name="BrowserTitle" />
-        <property name="DefaultPath" />
-        <property name="Path" />
-      </itemgroup>
-    </itemgroups>
-    <signals>
-      <itemgroup label="BaseFileEntry Signals">
-        <signal name="PathChanged" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Ide.Gui.Components.ProjectFileEntry" palette-category="General" allow-children="false" base-type="Gtk.HBox">
-    <itemgroups>
-      <itemgroup label="ProjectFileEntry Properties">
-        <property name="DialogTitle" />
-        <property name="DefaultFilter" />
-        <property name="EntryIsEditable" />
-        <property name="VerifyFileExistsInProject" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.MenuButtonEntry" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.HBox">
-    <itemgroups>
-      <itemgroup label="MenuButtonEntry Properties">
-        <property name="Text" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.PropertyGrid.PropertyGrid" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.VBox">
-    <itemgroups>
-      <itemgroup label="PropertyGrid Properties">
-        <property name="ShowToolbar" />
-        <property name="ShowHelp" />
-      </itemgroup>
-    </itemgroups>
-    <signals>
-      <itemgroup label="PropertyGrid Signals">
-        <signal name="Changed" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Components.NotebookButtonBar" palette-category="MonoDevelop.Components" allow-children="false" base-type="Gtk.Toolbar">
-    <itemgroups />
-    <signals />
-  </object>
-  <object type="MonoDevelop.Components.ListView" palette-category="General" allow-children="false" base-type="Gtk.DrawingArea">
-    <itemgroups>
-      <itemgroup label="ListView Properties">
-        <property name="AllowMultipleSelection" />
-        <property name="SelectedRow" />
-        <property name="SelectionDisabled" />
-        <property name="Page" />
-      </itemgroup>
-    </itemgroups>
-    <signals>
-      <itemgroup label="ListView Signals">
-        <signal name="SelectionChanged" />
-        <signal name="ItemActivated" />
-      </itemgroup>
-    </signals>
-  </object>
-  <object type="MonoDevelop.Ide.Projects.OptionPanels.BaseDirectoryPanelWidget" palette-category="MonoDevelop.Projects.Gui" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups>
-      <itemgroup label="BaseDirectoryPanelWidget Properties">
-        <property name="BaseDirectory" />
-      </itemgroup>
-    </itemgroups>
-    <signals />
-  </object>
-  <object type="MonoDevelop.Ide.CodeFormatting.CodeFormattingPolicyPanelWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals />
-  </object>
-  <object type="MonoDevelop.Ide.Gui.Components.StringTagSelectorButton" palette-category="General" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals />
-  </object>
-</objects>
