@@ -1,5 +1,15 @@
 2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* gtk-gui/gui.stetic: Flsuh.
+
+	* Makefile.am:
+	* gtk-gui/objects.xml: Removed objects.xml from the
+	  Makefile.am since it's not in the project file and was
+	  breaking the build when MD added a resource ID to the
+	  makefile.
+
+2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.Ide.addin.xml: The "navigate forward/back"
 	  commands now use the Xcode binding, and a similar binding on
 	  Windows so they no longer block the subword navigation. Also
